--- a/src/pages/dashboard/dashboardPage.css
+++ b/src/pages/dashboard/dashboardPage.css
@@ -319,7 +319,7 @@
     position: absolute;
     width: 100%;
     height: 100vh;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: gray;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -327,15 +327,28 @@
   }
 
 .spinner {
-    border: 4px solid rgba(0, 0, 0, 0.3);
-    border-top: 4px solid #000;
+    width: 12px;
+    height: 12px;
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    animation: spin 1s linear infinite;
+    display: block;
+    margin:15px auto;
+    position: relative;
+    color: #FFF;
+    box-sizing: border-box;
+    animation: spin 1s linear infinite alternate;
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+        box-shadow: -38px -12px ,  -14px 0,  14px 0, 38px 0;
+    }
+    33% {
+        box-shadow: -38px 0px, -14px -12px,  14px 0, 38px 0;
+    }
+    66% {
+        box-shadow: -38px 0px , -14px 0, 14px -12px, 38px 0;
+    }
+    100% {
+        box-shadow: -38px 0 , -14px 0, 14px 0 , 38px -12px;
+    }
 }
