--- a/src/pages/dashboard/dashboardPage.css
+++ b/src/pages/dashboard/dashboardPage.css
@@ -110,7 +110,7 @@
     right: 0;
     top: 55px;
     overflow-x: hidden;
-    background-color: #6b8493;
+    background-color: #1b113f;
 }
 
 .tasks-container {
