--- a/src/components/taskList/task1.css
+++ b/src/components/taskList/task1.css
@@ -1,10 +1,14 @@
 /* Estilos base */
+
+
 .task-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 40vh;
+  height: 50vh;
   background-color: #1b113f;
+  margin-bottom: 30px;
+  padding: 15px;
 }
 
 .task {
@@ -13,12 +17,13 @@
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(166, 37, 37, 0.1);
   transition: transform 0.4s ease, box-shadow 0.4s ease;
-  padding: 20px;
-  width: 20rem;
+  padding: 15px;
+  width: 15rem;
   margin: 16px;
   font-family: "Roboto", sans-serif;
   border-left: 8px solid #00d0ff;
   overflow: hidden;
+  margin-bottom: 30px;
 }
 
 .task::before {
@@ -128,6 +133,20 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
+}
+
+.btn-delete{
+  background-color: #de2727;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+  padding: 4px 10px;
+}
+.btn-edit{
+  background-color: #0eb33a;
+  color: #fff;
+  padding: 4px 10px;
 }
 
 .btn-primary:hover {
