--- a/src/components/taskList/createTasks1.css
+++ b/src/components/taskList/createTasks1.css
@@ -1,10 +1,56 @@
+.add-task-title {
+    font-family: 'Arial', sans-serif; /* Fuente */
+    font-size: 24px; /* Tamaño de fuente */
+    color: #f8f8f8; /* Color de texto */
+    text-transform: uppercase; /* Convertir texto a mayúsculas */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); /* Sombra de texto */
+    margin-bottom: 20px; /* Espacio inferior */
+    padding: 10px; /* Espaciado interno */
+    background-color: #161313; /* Color de fondo */
+    border-radius: 8px; /* Bordes redondeados */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra */
+    border: 1px solid #ccc; /* Borde */
+    text-align: center; /* Alineación centrada */
+}
+
+.add-task-title::after {
+    content: ''; /* Contenido adicional */
+    display: block; /* Mostrar como bloque */
+    width: 100%; /* Ancho completo */
+    height: 2px; /* Altura */
+    background-color: #333; /* Color de línea */
+    margin-top: 8px; /* Espacio superior */
+}
+
+.error-message {
+    color: rgb(7, 7, 7);
+    font-size: 14px;
+    margin-top: 8px; /* Espacio superior */
+    background-color: #ffe6e6; /* Color de fondo */
+    border: 1px solid #ffcccc; /* Borde */
+    border-radius: 4px; /* Bordes redondeados */
+    padding: 10px 15px; /* Espaciado interno */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra */
+}
+
+.error-message::before {
+    content: "⚠️"; /* Icono de advertencia */
+    margin-right: 8px; /* Espacio entre el icono y el texto */
+}
+
+.error-message::after {
+    content: "";
+}
+
+
 .add-task-container {
     width: 400px;
     margin: 40px auto 20px auto;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
+    background-color: #333;
+    border-left: 8px solid #00d0ff;
   }
   
   .add-task-form {
@@ -17,9 +63,9 @@
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-    border: 2px solid #ccc;
+    border: 2px solid #fffefe;
     border-radius: 5px;
-    background-color: #f8f8f8;
+    background-color: #3c1ab7;
     font-size: 16px;
     color: #333;
     transition: border-color 0.3s, box-shadow 0.3s;
@@ -42,7 +88,7 @@
     box-sizing: border-box;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
+    background-color: #0eb33a;
     font-size: 16px;
     color: #fff;
     cursor: pointer;
@@ -50,7 +96,7 @@
   }
   
   .add-task-button:hover {
-    background-color: #0056b3;
+    background-color: #0c7b2a;
   }
   
   
